---
source: tests/lexer.rs
description: "\nlet obj = {\n    key: \"value\",\n    otherKey: [\"val\", \"vlue\"]\n}\n"
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    Let("let") at Position { value: 1, line: 1, col: 0 },
    Ident("obj") at Position { value: 5, line: 1, col: 4 },
    Assign("=") at Position { value: 9, line: 1, col: 8 },
    LBracket("{") at Position { value: 11, line: 1, col: 10 },
    Ident("key") at Position { value: 17, line: 2, col: 4 },
    Colon(":") at Position { value: 20, line: 2, col: 7 },
    StringLiteral("\"value\"") at Position { value: 22, line: 2, col: 9 },
    Comma(",") at Position { value: 29, line: 2, col: 16 },
    Ident("otherKey") at Position { value: 35, line: 3, col: 4 },
    Colon(":") at Position { value: 43, line: 3, col: 12 },
    LSquare("[") at Position { value: 45, line: 3, col: 14 },
    StringLiteral("\"val\"") at Position { value: 46, line: 3, col: 15 },
    Comma(",") at Position { value: 51, line: 3, col: 20 },
    StringLiteral("\"vlue\"") at Position { value: 53, line: 3, col: 22 },
    RSquare("]") at Position { value: 59, line: 3, col: 28 },
    RBracket("}") at Position { value: 61, line: 4, col: 0 },
]
